tests/miniJava/neg/001544_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new public int [] java ( ) { return 0 ; } ( ) ; } }
